Fix margin collapsing

--- a/assets/css/lanyon.css
+++ b/assets/css/lanyon.css
@@ -81,6 +81,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .container {
   max-width: 28rem;
+  overflow: auto;
 }
 @media (min-width: 38rem) {
   .container {
